force-app/main/default/objects/Lead/fields/Base__c.field-meta.xml
<CustomField>
    <fullName>Base__c</fullName>
    <label>Base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Buenos Aires</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Madrid</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>