force-app/main/default/objects/Lead/fields/Custom_field_for_Convertion_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Custom_field_for_Convertion_Mapping__c</fullName>
    <label>Custom field for Convertion Mapping</label>
    <length>100</length>
    <type>Text</type>
</CustomField>