force-app/main/default/objects/Lead/fields/monthly_salary_offer__c.field-meta.xml
<CustomField>
    <fullName>monthly_salary_offer__c</fullName>
    <label>Monthly Salary Offer</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>