force-app/main/default/objects/Lead/fields/Next_Interview__c.field-meta.xml
<CustomField>
    <fullName>Next_Interview__c</fullName>
    <label>Next Interview</label>
    <type>DateTime</type>
</CustomField>