force-app/main/default/objects/Lead/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
                <label>California</label>
            </value>
            <value>
                <fullName>OH</fullName>
                <label>Ohio</label>
            </value>
            <value>
                <fullName>FL</fullName>
                <label>Florida</label>
            </value>
            <value>
                <fullName>TX</fullName>
                <label>Texas</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>Alabama</label>
            </value>
            <value>
                <fullName>AK</fullName>
                <label>Alaska</label>
            </value>
            <value>
                <fullName>AZ</fullName>
                <label>Arizona</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>