force-app/main/default/objects/Lead/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Contact</fullName>
            </value>
            <value>
                <fullName>Tech Interview</fullName>
            </value>
            <value>
                <fullName>Fit Cultural</fullName>
            </value>
            <value>
                <fullName>Final Negotiation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>