force-app/main/default/objects/Lead/recordTypes/Job_Offer.recordType-meta.xml
<RecordType>
    <fullName>Job_Offer</fullName>
    <active>true</active>
    <businessProcess>Standard Lead</businessProcess>
    <label>Job Offer</label>
</RecordType>