force-app/main/default/objects/Lead/recordTypes/Third_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Third_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Standard Lead</businessProcess>
    <label>Third Record Type</label>
</RecordType>