force-app/main/default/objects/Lead/validationRules/Contact_Info_at_least_One.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Info_at_least_One</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( MobilePhone )  &amp;&amp; 
  ISBLANK( Email ) &amp;&amp; 
  ISBLANK( Website )</errorConditionFormula>
    <errorMessage>Please provide at least one of the following fields: Mobile, Email, Website</errorMessage>
</ValidationRule>