force-app/main/default/objects/Lead/listViews/Job_Offers.listView-meta.xml
<ListView>
    <fullName>Job_Offers</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>monthly_salary_offer__c</columns>
    <columns>Status__c</columns>
    <columns>Next_Interview__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Job_Offer</value>
    </filters>
    <label>Open Job Offers</label>
</ListView>